<resources>
    <string name="app_name">Barclays Interview Project</string>
    <string name="button">GetData</string>
    <string name="dialog_title">Please wait</string>
    <string name="dialog_msg">Loading...</string>
    <string name="error_message">No results Found</string>
    <string name="search_hint">Search Term</string>
    <string name="movie">Movie</string>
    <string name="podcast">Podcast</string>
    <string name="music">Music</string>
    <string name="musicVideo">Music Video</string>
    <string name="audioBook">Audio Book</string>
    <string name="shortfilm">Short Film</string>
    <string name="tvshow">TV Show</string>
    <string name="software">Software</string>
    <string name="ebook">eBook</string>
    <string name="all">All</string>
    <string name="invalid">Invalid value for key</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="network_error_message">Network call failed</string>
    <string name="error_empty">Empty term or no option selected</string>
</resources>
